--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,59 @@
-uvicorn~=0.22.0
 aiogram~=3.3.0
 environs~=9.5.0
-pytz~=2023.3
-pydantic~=2.3.0
 structlog~=24.1.0
-orjson~=3.9.7
+orjson~=3.9.12
+kerykeion~=4.3.1
+openai~=1.11.0
+telegraph~=2.2.0
+aiogram_i18n~=1.3.4
+Babel~=2.14.0
+aiogoogle~=5.6.0
+redis~=5.0.1
+aioredis~=2.0.1
+apscheduler-di~=0.1.0
+geocoder~=1.38.1
+
+cffi~=1.16.0
+defusedxml~=0.7.1
+pillow~=10.2.0
+attrs~=23.2.0
+distro~=1.9.0
+wheel~=0.38.4
+setuptools~=65.5.1
+pytz~=2022.7.1
+idna~=3.6
+multidict~=6.0.4
+cattrs~=23.2.3
+click~=8.1.7
+aiofiles~=23.2.1
+certifi~=2023.11.17
+aiohttp~=3.9.3
+yarl~=1.9.4
+aiosignal~=1.3.1
+frozenlist~=1.4.1
+urllib3~=2.2.0
+cssselect2~=0.7.0
+tinycss2~=1.2.1
+cairocffi~=1.6.1
+marshmallow~=3.20.2
+python-dotenv~=1.0.1
+webencodings~=0.5.1
+terminaltables~=3.1.10
+requests~=2.31.0
+pycparser~=2.21
+colorama~=0.4.6
+packaging~=23.2
+six~=1.16.0
+appdirs~=1.4.4
+h11~=0.14.0
+rsa~=4.9
+pyasn1~=0.5.1
+sniffio~=1.3.0
+httpcore~=1.0.2
+cachetools~=5.3.2
+httpx~=0.26.0
+pydantic~=2.5.3
+anyio~=4.2.0
+numpy~=1.26.3
+pandas~=2.2.0
+APScheduler~=3.10.4
